--- a/app/package.json
+++ b/app/package.json
@@ -7,10 +7,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.9",
     "cpf-cnpj-validator": "^1.0.3",
     "marked": "^15.0.11",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-email-validator": "^1.0.2",
     "react-google-recaptcha": "^3.1.0",
