--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "multer": "^2.0.0",
     "mysql": "^2.18.1",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "uuid": "^11.1.0"
   }
