--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "cpf-cnpj-validator": "^1.0.3",
     "marked": "^15.0.11",
     "prop-types": "^15.8.1",
