--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.17.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
